	* fix build with WolfSSL
	* fix issue where incoming uTP connections were not accepted over SOCKS5
	* fix several issues in handling of checking files of v2 torrents, esp. from magnet links
	* make the token limit when parsing metadata from magnet files configurable
	* fix issue with stalled pieces on disk full errors
	* fix missing python binding for file_progress_flags
	* fix torrent_file_with_hashes() to fail when we don't have the piece layers
	* restore path character encoding conversion for non UTF-8 locales on linux
	* fix use-after-free bug in make_magnet_uri
	* add write_torrent_file() to produce a .torrent file from add_torrent_params
	* allow loading v2 .torrent files without piece layer
	* fix issue with adding v2 torrents with invalid file root hash

* 2.0.4 released

	* fix piece picker bug causing double-picks with prefer-contiguous enabled
	* expose session_params in python bindings
	* fix (deprecated) use of add_torrent_params::info_hash
	* fix issue creating and loading v2 torrents with empty files. Improves
	  conformance to BEP52 reference implementation

* 2.0.3 released

	* add new torrent_file_with_hashes() which includes piece layers for
	  creating .torrent files
	* add file_prio_alert, posted when file priorities are updated
	* fix issue where set_piece_hashes() would not propagate file errors
	* add missing python binding for event_t
	* add work-around for systems without fseeko() (such as Android)
	* add convenience header libtorrent/libtorrent.hpp
	* increase default max_allowed_in_request_queue
	* fix loading non-ascii filenames on windows with torrent_info constructor (2.0 regression)
	* add std::hash<> specialization for info_hash_t
	* fix integer overflow in hash_picker and properly restrict max file sizes in torrents
	* strengthen SSRF mitigation for web seeds

* 2.0.2 released

	* add v1() and v2() functions to torrent_info
	* fix piece_layers() to work for single-piece files