@@ -1,3 +1,4 @@
+	* on windows, explicitly flush memory mapped files periodically
 	* fix build with WolfSSL
 	* fix issue where incoming uTP connections were not accepted over SOCKS5
 	* fix several issues in handling of checking files of v2 torrents, esp. from magnet links
